# Service-Template

./: .env copy  .gitignore  Dockerfile  Dockerfile-MCP  README.Docker.md  README.md  compose.yaml  main.py  pyproject.toml
app/: init_app.py  init_mcp.py  router.py
app/controller/: controller_demo.py  controller_mcp_tools.py
app/tools/: tool_demo.py
config/: __init__.py  config.demo.yaml  init_config.py
core/: init_config.py
core/handler/: __init__.py  handle_context_manager.py  handle_service.py  handle_service_redis.py
core/items/: enum_system.py  item_base.py  item_config.py  item_request.py  item_response.py
models/: base.py  model_demo.py
templates/: index.html
utils/: util_log.py  util_object.py
