[project]
name = "service-template"
version = "0.1.0"
description = "web server on fastapi"
authors = [
    {name = "tiger19920910@163.com"}
]
readme = "README.md"
requires-python = ">=3.10"
package-mode = false
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "greenlet (>=3.2.2,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "cryptography (>=46.0.6,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
